Thank you mysterious man deep in the comments thread for the workaround to make gt work with both HTML and LaTeX for table captions, geez

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -448,10 +448,11 @@ However, it is by no means the only possibility.
 Any information criterion (Section \@ref(information-criteria)) or cross-validation strategy (Section \@ref(cross-validation)) can be redefined using a different scoring rule, or utility function more broadly.
 Possible examples include the root mean square error (RMSE), variance explained ($R^2$) or classification accuracy.
 
-The log score (LS) is popular in part because it is an example of a strictly proper scoring rule (SPSR).
+The log score (LS) is popular, in par,t because it is an example of a strictly proper scoring rule (SPSR).
 A scoring rule is strictly proper when the forecaster gains maximum expected reward by reporting their true probability distribution.
 Any scoring rule which does not admit this property is susceptible to manipulation, in some sense.
 The continuous ranked probability score [CRPS; @matheson1976scoring], which generalises the Brier score [@brier1950verification] beyond binary classification, is another example of a SPSR.
+Ideally, the correct scoring rule to use in an analysis should be determined based upon the application setting.
 
 ### Bayes factors
 
