--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -180,7 +180,7 @@ In surveys without such a question, women almost never (0.01\%) answered that on
 This incomparability made it inappropriate to include surveys without a specific transactional sex question when estimating the proportion of the population who engaged in transactional sex.
 Of the total `r total_surveys` surveys included in the analysis, `r length(giftsvar_surveys)` had a specific transactional sex question, with a total sample size of `r comma(agyw_surveyed_giftsvar - giftsvar_Y025_029_overcount)` (`r comma(agyw_surveyed_giftsvar_age$Y015_019)` aged 15-19 years, `r comma(agyw_surveyed_giftsvar_age$Y020_024)` aged 20-24 years, and `r comma(agyw_surveyed_giftsvar_age$Y025_029 - giftsvar_Y025_029_overcount)` aged 25-29 years).
 The sample size for women aged 25-29 is smaller because there were `r length(giftsvar_exclude_Y025_029)` DHS surveys which excluded women 25-29 from the transactional sex survey question.
-Appendix \@ref(household-survey-data-agyw) gives the sample size by age group for every survey included in the analysis, and all excluded surveys.
+Table \@ref(tab:household-survey-data) gives the sample size by age group for every survey included in the analysis.
 
 (ref:category-flowchart) Flowchart describing how respondents were classified to HIV risk groups based on their survey responses.
 
