--- a/references.bib
+++ b/references.bib
@@ -3059,3 +3059,24 @@ URL = {https://doi.org/10.1214/12-SS102}
   year={2018},
   publisher={Springer}
 }
+
+@Misc{rstanarm,
+  title = {rstanarm: {Bayesian} applied regression modeling via {Stan}.},
+  author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
+  note = {R package version 2.21.1},
+  year = {2020},
+  url = {https://mc-stan.org/rstanarm},
+}
+
+@Article{brms,
+    title = {{brms}: An {R} Package for {Bayesian} Multilevel Models
+      Using {Stan}},
+    author = {Paul-Christian Bürkner},
+    journal = {Journal of Statistical Software},
+    year = {2017},
+    volume = {80},
+    number = {1},
+    pages = {1--28},
+    doi = {10.18637/jss.v080.i01},
+    encoding = {UTF-8},
+}
