--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -86,7 +86,7 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.
     For example, in Section \@ref(malawi), although the PCA-AGHQ grid improved latent field parameter inferences, it did little to improve model output accuracy.
     Is there a way in which computational could be focused on obtaining accurate estimates of Naomi model outputs?
 
-    Additionally, it is relatively easy to make alterations to the implementaiton, facilitating possible innovation in the design of INLA-like algorithms.
+    Additionally, it is relatively easy to make alterations to the implementation, facilitating possible innovation in the design of INLA-like algorithms.
     Previously, it has been difficult for researchers not involved in development of `R-INLA` to engage in methodological work about the INLA method.
 
     Theoretical research could be conducted to complement the work described above, extending the findings of @bilodeau2022stochastic.
