--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -28,7 +28,7 @@ The contributions of this thesis are both in generating this information, and in
 
 Chapter \@ref(beyond-borders) found that spatially structured random effects should be used in small-area models for HIV.
 Kernel models performed better for data simulated from an adjacency-based spatial process than adjacency-based models did for data simulated from a kernel model.
-That said, adjacency-based models performed better under cross-validation of real HIV survey data.
+However, adjacency-based models performed better under cross-validation of real HIV survey data.
 Model comparison was conducted using strictly proper scoring rules, with checks for calibration.
 
 (ref:global-update-conclusion) Panel A shows the front page of @unaids2023global. Panel B shows the page containing text and a figure based on the work done in Chapter \@ref(multi-agyw). In this figure, 30 countries are included.
