--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -565,19 +565,27 @@ knitr::include_graphics(path)
 
 The two problems with the vignette geometry study did not apply to the more realistic geometries.
 Figures \@ref(fig:crps-mean-se-grid), \@ref(fig:crps-mean-se-civ) and \@ref(fig:crps-mean-se-tex) show mean CRPS values with 95% credible intervals which rarely overlap, and hence provide meaningful findings.
+Mean MSE and CRPS values are provided in Tables \@ref(mse-table) and \@ref(crps-table).
 
 The average CRPS varied substantially between the three models (Table \@ref(tab:simulation-models)) used to simulate synthetic data.
-In particular, IID structure is harder to predict than spatial structure.
-To a lesser extent, Besag structure is harder to predict than IK.
-This finding is explained by correlation structure making forecasting easier.
+IID structure is harder to predict than spatial structure, and to a lesser extent, Besag structure is harder to predict than IK.
+This observation is explained by correlation structure making forecasting easier.
 
 For IID synthetic data, the IID and BYM2 models performed well.
-The BYM2 model also performed almost as well as the Besag model on the spatially structured synthetic data (Besag or IK).
-Meanwhile, the IID model performed poorly on spatially structured synthetic data.
+The BYM2 model also performed almost as well as the Besag model on the spatially structured synthetic data.
 Appendix \@ref(bym2-proportion) shows that the BYM2 proportion parameter successfully recovers either IID or spatial structure.
+Meanwhile, the IID model performed poorly on spatially structured synthetic data.
 
 The performance of kernel models on IID and Besag synthetic data diminished with increasingly spatially irregular geometry.
 For the most part, differences between the centroid and integrated kernel models were small, even for synthetic data generated from the IK model.
+Only for the IK simulated data there was a significant difference between the kernel models with a fixed lengthscale and prior distribution set on the lengthscale.
+
+Interpretation of CRPS choropleths (Figures \@ref(crps-mean-se-grid), \@ref(crps-mean-se-civ) and \@ref(crps-mean-se-tex)) was challenging primarily due to two factors: varying scores by simulation model, and limited sample size at the area-level.
+It would be relatively simple to remedy these challenges, such that figures of this kind could help to uncover precise findings about spatial random effect models.
+
+For IID synthetic data, spatial models tend to produce "U"-shaped ECDF difference plots (Figures \@ref(histogram-ecdf-diff-grid), \@ref(histogram-ecdf-diff-civ) and \@ref(histogram-ecdf-diff-tex)).
+In other words, the quantile of the true value is too often near zero or one.
+This pattern corresponds to over-smoothing.
 
 ## HIV prevalence study {#hiv-study}
 
