Fix typo in acknowledgements

--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -13,7 +13,7 @@ Thanks to Trenton, Lenni, Lenny, Geetha, Janika, Simon, Phil, Frances, Leilani a
 
 Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
 Without Alex, Chapter \@ref(naomi-aghq) would not have been possible, and I'd still be waiting Markov chains began in Chapter \@ref(beyond-borders) to converge.
-Tim Lucas and Patrick Brown for put me in touch with Alex, and Håvard Rue and Finn Lindgren gave helpful answers on the `R-INLA` discussion group.
+Tim Lucas and Patrick Brown put me in touch with Alex, and Håvard Rue and Finn Lindgren gave helpful answers on the `R-INLA` discussion group.
 Thanks also to Kate, my tour guide in Waterloo, and Midtown Yoga for helping me stay balanced.
 
 My sense for what matters has been shaped, and arguably improved, by the Effective Altruism community.
