Update Esra 2024 cite

--- a/references.bib
+++ b/references.bib
@@ -746,10 +746,16 @@
   pages = {345--349}
 }
 
-@misc{esra2023improved,
-  title = {{Improved indicators for subnational unmet antiretroviral therapy need in the health system: updates to the Naomi model in 2023}},
-  author = {Esra, Rachel and Mmelesi, Mpho and Ketlogetswe, Akeem T. and Wolock, Timothy M. and Howes, Adam and Nong, Tlotlo and Matlhaga, Matshelo Tina and Ratladi, Siphiwe and Ramaabya, Dinah and Imai-Eaton, Jeffrey W},
-  year = 2023
+@article{esra2024improved,
+  title={Improved Indicators for Subnational Unmet Antiretroviral Therapy Need in the Health System: Updates to the Naomi Model in 2023},
+  author={Esra, Rachel and Mmelesi, Mpho and Ketlogetswe, Akeem T. and Wolock, Timothy M. and Howes, Adam and Nong, Tlotlo and Matlhaga, Matshelo Tina and Ratladi, Siphiwe and Ramaabya, Dinah and Imai-Eaton, Jeffrey W.},
+  journal={JAIDS Journal of Acquired Immune Deficiency Syndromes},
+  volume={95},
+  number={1S},
+  pages={e24-e33},
+  year={2024},
+  month={January 1},
+  doi={10.1097/QAI.0000000000003324},
 }
 
 @misc{fattah2022smart,
