--- a/references.bib
+++ b/references.bib
@@ -1583,7 +1583,7 @@
 }
 
 @article{meng2018statistical,
-  title = {{Statistical paradises and paradoxes in big data (i) law of large populations, big data paradox, and the 2016 us presidential election}},
+  title = {{Statistical paradises and paradoxes in big data (i) law of large populations, big data paradox, and the 2016 US presidential election}},
   author = {Meng, Xiao-Li},
   year = 2018,
   journal = {The Annals of Applied Statistics},
